Fix white corner bleed on workcards
Summary: There is a hair of #fff hanging out on the right side, round it a bit.

Test Plan: ZOOOOM IN on a Workboard

Reviewers: epriestley

Reviewed By: epriestley

Subscribers: Korvin

Differential Revision: https://secure.phabricator.com/D15138

--- a/webroot/rsrc/css/phui/workboards/phui-workcard.css
+++ b/webroot/rsrc/css/phui/workboards/phui-workcard.css
@@ -4,8 +4,7 @@
 
 .phui-workboard-view .phui-object-item {
   background-color: #fff;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
+  border-radius: 3px;
   margin-bottom: 6px;
 }
 
